更新部署与启动脚本